# cmake-init-conan-example

./: CMakeLists.txt  CMakePresets.json  REPRODUCE.md  conanfile.txt
source/: main.cpp
test/: CMakeLists.txt
test/source/: conan-example_test.cpp
